--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,6 +82,7 @@
 html,
 body {
   max-width: 100vw;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
@@ -89,10 +90,9 @@ body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      #321A47,
+      #00284A
+    );
 }
 
 a {
