--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,21 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 .LoginContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  padding: 50px;
+  border: 1px solid #533BA3;
+  border-radius: 20px;
+  background: #050618;
+}
+
+#title {
+  display: inline-block;
+  margin: 5px;
+  font-size: 24px;
+}
+
+#user {
+  display: inline-block;
+  margin: 5px;
+  font-size: 18px;
 }
