--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -81,23 +83,38 @@
 
 html,
 body {
+  font-family: "Quicksand";
   max-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
   background: linear-gradient(
       to bottom,
       #321A47,
-      #00284A
+      #050618
     );
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  margin: 5px;
+  margin-top: 30px;
+  padding: 10px;
+  border: 1px solid #533BA3;
+  border-radius: 999px;
+  background: #050618;
+  color: #533BA3;
 }
 
 @media (prefers-color-scheme: dark) {
