Updated login page CSS

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -19,3 +19,30 @@
   margin: 5px;
   font-size: 18px;
 }
+
+#LoginButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  margin-top: 30px;
+  padding: 20px;
+  border: 1px solid #533BA3;
+  border-radius: 10px;
+  background: #050618;
+  color: #533BA3;
+}
+
+#Google {
+  margin-left: 20px;
+}
+
+.Footer {
+  position: fixed;
+  opacity: 50%;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin: auto;
+}
