--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
 
 #home {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: center;
-  width: 50vw;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    width: 50vw;
 }
 
 #title {
@@ -15,12 +15,12 @@
 }
 
 .HomeContainer {
-  margin: 20px 0 20px 0;
-  text-align: center;
-  padding: 20px;
-  border: 1px solid #533BA3;
-  border-radius: 20px;
-  background: #050618;
+    margin: 20px 0 20px 0;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid #533BA3;
+    border-radius: 20px;
+    background: #050618;
 }
 
 #UserContainer {
@@ -42,6 +42,13 @@
     width: 32px;
     border: 1px solid #533BA3;
     border-radius: 50%;
+}
+
+#logout {
+    height: 32px;
+    width: 32px;
+    filter: invert(100%);
+    cursor: pointer;
 }
 
 #username {
@@ -68,11 +75,29 @@
     text-align: left;
 }
 
+.ProgressBar {
+    margin: 20px 0 20px 0;
+    border: 1px solid #533BA3;
+    border-radius: 20px;
+    background: #050618;
+    box-sizing: content-box;
+}
+
+.Progress {
+    content: "";
+    display: inline-block;
+    position: relative;
+    width: 50%;
+    height: 20px;
+    border-radius: 20px;
+    background-color: #fff;
+}
+
 .Footer {
-  position: fixed;
-  opacity: 50%;
-  bottom: 30px;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  margin: auto;
+    position: fixed;
+    opacity: 50%;
+    bottom: 30px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    margin: auto;
 }
