--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -94,10 +94,33 @@
 }
 
 .Footer {
-    position: fixed;
-    opacity: 50%;
-    bottom: 30px;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    margin: auto;
+  position: fixed;
+  opacity: 50%;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  margin: auto;
+}
+
+.circle {
+  top: 0;
+  right: 50;
+  position: fixed;
+
+  z-index: -100;
+  /* background: radial-gradient(circle, #533BA3, #0A0311); */
+  height: 100vh;
+  width: 100vw;
+
+  background: rgba(83, 59, 163, 0.5);
+  /* mix-blend-mode: hard-light; */
+  filter: blur(500px);
+}
+
+.cover {
+  background-color: black;
+  filter: blur(1.5rem);
+  opacity: 0.7;
+  min-height: 100vh;
+  min-width: 100vh;
 }
