Update gradient CSS

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -103,8 +103,9 @@
 }
 
 .circle {
-  top: 0;
-  right: 50;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: fixed;
 
   z-index: -100;
@@ -112,15 +113,7 @@
   height: 100vh;
   width: 100vw;
 
-  background: rgba(83, 59, 163, 0.5);
+  background: #533BA3;
   /* mix-blend-mode: hard-light; */
   filter: blur(500px);
-}
-
-.cover {
-  background-color: black;
-  filter: blur(1.5rem);
-  opacity: 0.7;
-  min-height: 100vh;
-  min-width: 100vh;
 }
