--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sniglet&display=swap');
 
 #home {
     display: flex;
@@ -21,9 +21,9 @@
     margin: 20px 0 20px 0;
     text-align: center;
     padding: 20px;
-    border: 1px solid #533BA3;
     border-radius: 20px;
-    background: #050618;
+    background: var(--color1);
+    box-shadow: 0px 10px 10px var(--color3);
 }
 
 #UserContainer {
@@ -43,14 +43,13 @@
 #userpic {
     height: 32px;
     width: 32px;
-    border: 1px solid #533BA3;
+    border: 1px solid var(--color1);
     border-radius: 50%;
 }
 
 #logout {
     height: 32px;
     width: 32px;
-    filter: invert(100%);
     cursor: pointer;
 }
 
@@ -89,8 +88,8 @@
     display: inline-block;
     border: none;
     outline-width: 0;
-    font: 100 18px/1.5 "Quicksand";
-    color: #fff;
+    font: 100 18px/1.5 "Sniglet";
+    color: var(--color4);
     width: 85%;
     background: transparent;
 }
@@ -98,17 +97,19 @@
 #SubmitButtonImage {
     height: 32px;
     width: 32px;
-    filter: invert(100%);
     cursor: pointer;
     display: inline-block;
-    rotate: 90deg;
 }
+
+#SubmitButtonImage path {
+    color: var(--color1);
+  }
 
 .PredictionBar {
     margin: 20px 0 20px 0;
-    border: 1px solid #533BA3;
+    border: 1px solid var(--color1);
     border-radius: 20px;
-    background: #050618;
+    background: var(--color4);
     box-sizing: content-box;
 }
 
@@ -120,14 +121,13 @@
     top: 2px;
     height: 20px;
     border-radius: 20px;
-    background: linear-gradient(to left, #533BA3, #2B2D67);
+    background: linear-gradient(to left, var(--color1), var(--color5));
 }
 
 .ProgressBar {
     margin: 20px 0 20px 0;
-    border: 1px solid #533BA3;
     border-radius: 20px;
-    background: #050618;
+    background: var(--color6);
     box-sizing: content-box;
     margin-bottom: 10vh;
 }
@@ -140,12 +140,11 @@
     top: 2px;
     height: 20px;
     border-radius: 20px;
-    background: linear-gradient(to left, #533BA3, #2B2D67);
+    background: linear-gradient(to left, var(--color1), var(--color5));
 }
 
 .Footer {
     position: sticky;
-    opacity: 25%;
     bottom: 5vh;
     left: 50%;
     transform: translate(-50%, 0%);
@@ -153,17 +152,17 @@
 }
 
 .circle {
-    top: -50%;
+    top: 150%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-
+  
     z-index: -100;
     /* background: radial-gradient(circle, #533BA3, #0A0311); */
     height: 100vh;
     width: 100vw;
-
-    background: #533BA3;
+  
+    background: var(--color3);
     /* mix-blend-mode: hard-light; */
     filter: blur(500px);
-}
+  }
