--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Sniglet&display=swap');
+
+:root {
+  --color1: #EEF1E6;
+  --color2: #BEB0D0;
+  --color3: #B796CC;
+  --color4: #B679CB;
+  --color5: #FEE3CA;
+  --color6: #F9B05F;
+
+}
 
 * {
   box-sizing: border-box;
@@ -8,7 +18,7 @@
 
 html,
 body {
-  font-family: "Quicksand";
+  font-family: "Sniglet";
   max-width: 100vw;
   min-height: 100vh;
   overflow-x: hidden;
@@ -19,7 +29,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white;
-  background: #050618;
+  color: var(--color4);
+  background: var(--color1);
 }
 
