--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -10,6 +10,13 @@
     max-width: 600px;
 }
 
+@media only screen and (min-width: 370px) {
+    #home {
+        min-width: 300px;
+        width: 90vw;
+    }
+}
+
 #title {
     display: inline-block;
     margin: 5px;
@@ -103,7 +110,7 @@
 
 #SubmitButtonImage path {
     color: var(--color1);
-  }
+}
 
 .PredictionBar {
     margin: 20px 0 20px 0;
@@ -156,13 +163,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-  
+
     z-index: -100;
     /* background: radial-gradient(circle, #533BA3, #0A0311); */
     height: 100vh;
     width: 100vw;
-  
+
     background: var(--color3);
     /* mix-blend-mode: hard-light; */
     filter: blur(500px);
-  }
+}
