fixed dark theme on login page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,8 @@
     --color6: #F9B05F;
     --color7: #B679CB;
     --color8: #EEF1E6;
+    --color9: #F9B05F;
+    --color10: #EEF1E6;
   }
 }
 
@@ -23,6 +25,8 @@
     --color6: #050618;
     --color7: #533BA3;
     --color8: #050618;
+    --color9: #533BA3;
+    --color10: #FFFFFF;
   }
 }
 
