--- a/src/styles/WebCam.module.css
+++ b/src/styles/WebCam.module.css
@@ -1,31 +1,40 @@
 .WebCamContainer {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
 
 .WebCamContainer button {
-  margin: 20px 0 20px 0;
   text-align: center;
   padding: 20px;
   border-radius: 20px;
-  background: var(--color1);
-  box-shadow: 0px 10px 10px var(--color3);
-  width: 100%;
+  box-shadow: 0px 5px var(--color3);
+  background-color: var(--color1) !important;
+  max-width: 60%;
   color: var(--color4);
-  font-size: 18px;
+  font-family: Sniglet;
+  font-size: 16px;
   border: none;
   outline-width: 0;
   background: transparent;
   cursor: pointer;
 }
 
+.WebCamContainer button:active {
+  background-color: lightgray;
+  transform: translateY(5px);
+  box-shadow: 0px 0px;
+}
+
 .WebCamContainer video {
+  margin: 0 0 10px 0;
   width: 100%;
   height: 100%;
   border-radius: 20px;
   background: var(--color1);
-  box-shadow: 0px 10px 10px var(--color3);
 }
 
 .CameraControls {
