--- a/src/styles/AlertBox.module.css
+++ b/src/styles/AlertBox.module.css
@@ -1,12 +1,21 @@
 .alert {
+  display: flex;
   position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 3;
+  bottom: 20px;
+  margin: auto;
+  padding: 15px;
+  border-radius: 20px;
+  text-align: center;
   opacity: 1;
-  background-color: rgba(0, 0, 0, .50);
+  color: var(--color1);
+  background-color: var(--color6);
 }
+
+#notetitle { font-size: 20px; font-weight: 800; }
+#notemessg { font-size: 16px; }
 
 .alert-success {
   background-color: #4CAF50;
@@ -33,11 +42,13 @@
   display: none;
 }
 
-.btn-close {
-  position: absolute;
+.btnclose {
+  font-family: Sniglet;
+  font-size: 24px;
+  font-weight: 800;
   top: 0;
   right: 0;
-  padding: 1rem 1rem;
+  padding: 10px 10px 10px 20px;
   color: inherit;
   background-color: transparent;
   border: 0;
