--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -26,7 +26,14 @@
   border-radius: 20px;
   background: var(--color9);
   color: var(--color10);
+  box-shadow: 0px 5px var(--color2);
   cursor: pointer;
+}
+
+#LoginButton:active {
+  background-color: var(--color2);
+  transform: translateY(5px);
+  box-shadow: 0px 0px;
 }
 
 #Google {
