--- a/src/styles/WebCam.module.css
+++ b/src/styles/WebCam.module.css
@@ -11,10 +11,9 @@
   text-align: center;
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 0px 5px var(--color3);
-  background-color: var(--color1) !important;
+  box-shadow: 0px 5px var(--color2);
   max-width: 60%;
-  color: var(--color4);
+  color: var(--color1);
   font-family: Sniglet;
   font-size: 16px;
   border: none;
@@ -23,8 +22,12 @@
   cursor: pointer;
 }
 
+.button {
+  background-color: var(--color6) !important;
+}
+
 .WebCamContainer button:active {
-  background-color: lightgray;
+  background-color: var(--color2);
   transform: translateY(5px);
   box-shadow: 0px 0px;
 }
