--- a/src/styles/WebCam.module.css
+++ b/src/styles/WebCam.module.css
@@ -27,7 +27,7 @@
 }
 
 .WebCamContainer button:active {
-  background-color: var(--color2);
+  background-color: var(--color2) !important;
   transform: translateY(5px);
   box-shadow: 0px 0px;
 }
