--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@
     --color8: #EEF1E6;
     --color9: #F9B05F;
     --color10: #EEF1E6;
+    --color11: #EEF1E6;
   }
 }
 
@@ -27,6 +28,7 @@
     --color8: #050618;
     --color9: #533BA3;
     --color10: #FFFFFF;
+    --color11: #FFFFFF;
   }
 }
 
