--- a/src/styles/WebCam.module.css
+++ b/src/styles/WebCam.module.css
@@ -7,11 +7,12 @@
   height: 100%;
 }
 
-.WebCamContainer button {
+.WebCamContainer .EnableButton {
   text-align: center;
   padding: 20px;
   border-radius: 20px;
   box-shadow: 0px 5px var(--color2);
+  background-color: var(--color6) !important;
   max-width: 60%;
   color: var(--color11);
   font-family: Sniglet;
@@ -22,12 +23,9 @@
   cursor: pointer;
 }
 
-.button {
-  background-color: var(--color6) !important;
-}
-
 .WebCamContainer button:active {
   background-color: var(--color2) !important;
+  border-radius: 20px;
   transform: translateY(5px);
   box-shadow: 0px 0px;
 }
@@ -46,4 +44,23 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
+}
+
+.CameraControls button {
+  text-align: center;
+  padding: 20px;
+  max-width: 60%;
+  font-family: Sniglet;
+  font-size: 16px;
+  border: none;
+  outline-width: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+.CameraControls button:active {
+  background-color: var(--color2) !important;
+  transform: translateY(5px);
+  box-shadow: 0px 0px;
+  border-radius: 20px;
 }
