--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@
     --color9: #F9B05F;
     --color10: #EEF1E6;
     --color11: #EEF1E6;
+    --color12: #BEB0D0;
   }
 }
 
@@ -29,6 +30,7 @@
     --color9: #533BA3;
     --color10: #FFFFFF;
     --color11: #FFFFFF;
+    --color12: #442d8f;
   }
 }
 
