--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -82,6 +82,23 @@
     cursor: pointer;
 }
 
+#NavigationContainer button:active {
+    border-radius: 20px;
+    transform: translateY(5px);
+    box-shadow: 0px 0px;
+}
+
+#NavigationContainer button:hover:not(:disabled) {
+    background-color: var(--color6);
+    color: var(--color11);
+    box-shadow: 0px 10px 10px var(--color2);
+}
+
+#NavigationContainer button:disabled {
+    color: var(--color3);
+    cursor: not-allowed;
+}
+
 #PuzzlesContainer {
     margin: 20px 0 20px 0;
     text-align: center;
