added dialogue component

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,8 @@
     --color10: #EEF1E6;
     --color11: #EEF1E6;
     --color12: #BEB0D0;
+    --color13: #000000;
+    --color14: #e0e3da;
   }
 }
 
@@ -31,6 +33,8 @@
     --color10: #FFFFFF;
     --color11: #FFFFFF;
     --color12: #442d8f;
+    --color13: #FFFFFF;
+    --color14: #808080;
   }
 }
 
