--- a/src/styles/LoadingIndicator.module.css
+++ b/src/styles/LoadingIndicator.module.css
@@ -25,7 +25,7 @@
   width: 13px;
   height: 13px;
   border-radius: 50%;
-  background: var(--color3);
+  background: var(--shadow-color2);
   animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
