--- a/src/styles/AlertBox.module.css
+++ b/src/styles/AlertBox.module.css
@@ -19,9 +19,9 @@
   border-radius: 20px;
   text-align: center;
   opacity: 1;
-  color: var(--color11);
-  box-shadow: 0px 5px var(--color2);
-  background-color: var(--color6);
+  color: var(--white);
+  box-shadow: 0px 5px var(--shadow-color1);
+  background-color: var(--button-color1);
 }
 
 #notetitle {
