--- a/src/styles/Dialogue.module.css
+++ b/src/styles/Dialogue.module.css
@@ -14,7 +14,7 @@
 .sender h1 {
   grid-row: 1;
   grid-column: 2;
-  color: var(--color12);
+  color: var(--text-color3);
   font-size: 1rem;
 }
 
@@ -28,8 +28,8 @@
 
 .sender p {
   grid-column: 2;
-  color: var(--color13);
-  background-color: var(--color14);
+  color: var(--background-color2);
+  background-color: var(--background-color3);
   border-radius: 10px;
   padding: 10px;
   margin-top: 3px;
@@ -49,7 +49,7 @@
 
 .receiver p {
   color: #fff;
-  background-color: var(--color9);
+  background-color: var(--button-color3);
   border-radius: 10px;
   padding: 10px;
   margin-top: 10px;
@@ -64,8 +64,8 @@
   margin: 10px 0;
   width: 100%;
   height: 50px;
-  color: var(--color12);
-  background-color: var(--color13);
+  color: var(--text-color3);
+  background-color: var(--background-color2);
   border-radius: 10px;
   padding: 10px;
 }
@@ -93,7 +93,7 @@
   height: 10px;
   width: 10px;
   border-radius: 50%;
-  background-color: var(--color13);
+  background-color: var(--background-color2);
   margin: 3px;
   animation: typing 1000ms ease-in-out infinite;
   animation-delay: 3600ms;
