--- a/src/styles/QRCode.module.css
+++ b/src/styles/QRCode.module.css
@@ -11,10 +11,10 @@
   text-align: center;
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 0px 5px var(--color2);
-  background-color: var(--color6) !important;
+  box-shadow: 0px 5px var(--shadow-color1);
+  background-color: var(--button-color1) !important;
   max-width: 60%;
-  color: var(--color11);
+  color: var(--white);
   font-family: Sniglet;
   font-size: 16px;
   border: none;
@@ -24,7 +24,7 @@
 }
 
 .QRCodeContainer button:active {
-  background-color: var(--color2) !important;
+  background-color: var(--shadow-color1) !important;
   border-radius: 20px;
   transform: translateY(5px);
   box-shadow: 0px 0px;
