--- a/src/styles/Dialogue.module.css
+++ b/src/styles/Dialogue.module.css
@@ -8,21 +8,21 @@
   border: none;
   float: left;
   display: grid;
-  grid-template-columns: 50px 1fr;
+  grid-template-columns: 30px 1fr;
 }
 
 .sender h1 {
   grid-row: 1;
   grid-column: 2;
   color: var(--text-color3);
-  font-size: 1rem;
+  font-size: 14px;
 }
 
 .sender img {
   grid-row: 2;
   grid-column: 1;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
 }
 
@@ -63,7 +63,7 @@
   align-items: center;
   margin: 10px 0;
   width: 100%;
-  height: 50px;
+  height: fit-content;
   color: var(--text-color3);
   background-color: var(--background-color2);
   border-radius: 10px;
