--- a/src/styles/Dialogue.module.css
+++ b/src/styles/Dialogue.module.css
@@ -1,7 +1,21 @@
+.DialogueContainer {
+  width: 100%;
+  height: 300px;
+  overflow-y: auto;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.DialogueContainer::-webkit-scrollbar {
+  display: none;
+}
+
 .container {
   display: flex;
-  height: 100%;
+  height: fit-content;
   width: 100%;
+  text-align: left;
 }
 
 .sender {
@@ -42,7 +56,7 @@
   flex-direction: column;
   justify-content: left;
   align-items: flex-end;
-  height: 100%;
+  height: fit-content;
   width: 100%;
   box-sizing: border-box;
 }
@@ -51,6 +65,7 @@
   color: #fff;
   background-color: var(--button-color3);
   border-radius: 10px;
+  text-align: right;
   padding: 10px;
   margin-top: 10px;
   width: fit-content;
@@ -59,8 +74,12 @@
 
 .inputMessage {
   display: flex;
+  position: sticky;
+  bottom: 0;
+
   justify-content: space-between;
   align-items: center;
+  text-align: left;
   margin: 10px 0;
   width: 100%;
   height: fit-content;
