--- a/src/styles/Dialogue.module.css
+++ b/src/styles/Dialogue.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 300px;
   overflow-y: auto;
+  margin: 5px 0;
 
   -ms-overflow-style: none;
   scrollbar-width: none;
@@ -32,12 +33,20 @@
   font-size: 14px;
 }
 
-.sender img {
+.sender .profileImage {
   grid-row: 2;
   grid-column: 1;
   width: 30px;
   height: 30px;
   border-radius: 50%;
+}
+
+.sender .sentImage {
+  grid-column: 2;
+  margin-top: 5px;
+  width: 200px;
+  height: 200px;
+  border-radius: 10px;
 }
 
 .sender p {
