--- a/src/styles/Index.module.css
+++ b/src/styles/Index.module.css
@@ -6,7 +6,7 @@
     align-content: center;
 
     scroll-snap-type: x mandatory;
-    overflow-x: auto;
+    overflow-x: hidden;
 
     -ms-overflow-style: none;
     scrollbar-width: none;
@@ -14,6 +14,7 @@
     width: 50vw;
     min-width: 300px;
     max-width: 600px;
+    height: 50vh;
 
     margin: 20px 0 20px 0;
     border-radius: 20px;
@@ -35,12 +36,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 
     scroll-snap-align: center;
-    width: 50vw;
-    min-width: 300px;
-    max-width: 600px;
+    min-width: 100%;
     padding: 20px;
 }
 
@@ -57,6 +55,7 @@
     justify-content: center;
     margin: 5px;
     margin-top: 30px;
+    margin-bottom: 30px;
     padding: 20px;
     border-radius: 20px;
     background: var(--button-color3);
@@ -75,6 +74,49 @@
     margin-left: 20px;
 }
 
+
+#NavigationContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+
+#NavigationContainer button {
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    width: 100%;
+    background-color: var(--background-color1);
+    color: var(--button-color2);
+    font-family: Sniglet;
+    font-size: 18px;
+    font-weight: 800;
+    border: none;
+    outline-width: 0;
+    background: transparent;
+    cursor: pointer;
+}
+
+#NavigationContainer button:active {
+    border-radius: 20px;
+    transform: translateY(5px);
+    box-shadow: 0px 0px;
+}
+
+#NavigationContainer button:hover:not(:disabled) {
+    background-color: var(--background-color1);
+    color: var(--text-color1);
+    box-shadow: 0px 10px 10px var(--shadow-color2);
+}
+
+#NavigationContainer button:disabled {
+    color: var(--shadow-color2);
+    cursor: not-allowed;
+}
+
+
 .ProgressBar {
     margin: 20px 0 20px 0;
     border-radius: 20px;
@@ -91,7 +133,7 @@
     top: 2px;
     height: 20px;
     border-radius: 20px;
-    background: linear-gradient(to left, var(--gradient1), var(--gradient2));
+    background: var(--gradient2);
 }
 
 .Footer {
